<resources>
    <string name="app_name">workout-diary</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="skipLogin">Proceed to home</string>
    <string name="username">Username</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="createAccount">Create account</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="dateFormat">YYYY-mm-dd</string>
    <string name="editProfile">Edit profile</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="goalWeight">Goal weight</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="name">Name</string>
    <string name="saveChanges">Save changes</string>
    <string name="manageAccount">Manage account</string>
    <string name="deleteAccount">Delete account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areYouSureDeleteAccount">Are you sure you want to delete this account?</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="usernameShort">Username too short</string>
    <string name="usernameLong">Username too long</string>
    <string name="invalidEmail">Invalid E-mail</string>
    <string name="passwordShort">Password too short</string>
    <string name="passwordNotMatching">Passwords not matching</string>
    <string name="selectGender">Select a gender</string>
    <string name="nameOnlyCharacters">Names can only be written in alphabetic characters</string>
    <string name="nameLong">Name too long</string>
    <string name="weightOnlyDigits">Weight can only be written in digits</string>
    <string name="goalWeightDigits">Goal weight can only be written in digits</string>
    <string name="heightDigits">Height can only be written in digits</string>
    <string name="authFailed">Authentication failed</string>
    <string name="signInFailed">Sign in failed</string>
    <string name="SignInGoogle">Sign in with google</string>
    <string name="enterEmail">You need to enter an E-mail</string>
    <string name="enterPassword">You need to enter a password</string>
    <string name="profile">Profile</string>
    <string name="yourDay">Your Day</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="yourWeek">Your Week</string>
    <string name="calenderView">Calender View</string>
    <string name="todaysWorkouts">Todays Workouts</string>
    <string name="chooseWorkout">Choose Workout to Add</string>
</resources>
